# greger-grammar

./: CITATION_FOLDING.md  CMakeLists.txt  Cargo.toml  FUNCTION_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  Package.swift  README.md  SEGFAULT_FIX_SUMMARY.md  STATUS.md  binding.gyp  build.sh  chat.ai  chat5.ai  chat7.greger  chat8.greger  chat9.greger  debug-backticks-trace.greger  debug-backticks-with-language.greger  debug-citation-detection.el  debug-citations-after.el  debug-citations-basic.el  debug-citations-simple.el  debug-citations.el  debug-content-type.el  debug-content.el  debug-double-backticks.greger  debug-empty-content.greger  debug-extraction.el  debug-failing-tests.el  debug-json-parsing.el  debug-last-char-is-backtick.txt  debug-multiple-citations.el  debug-nodes.el  debug-other-contents.greger  debug-parser.el  debug-proper-language.greger  debug-section-order.el  debug-section-types.el  debug-server-tool-basic.el  (+163 more)
.github/workflows/: ci.yml  test-matrix.yml  validate.yml
bindings/c/: tree-sitter-greger.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
scripts/: validate.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: citations-after-tool-result.greger  citations-after-tool-result.txt  citations-basic.greger  citations-basic.txt  citations-multiple.greger  citations-multiple.txt  code-block-nested-headers.txt  code-block-triple-backticks.greger  code-block-triple-backticks.txt  code-close-tag-basic.txt  code-close-tag-mixed.txt  code.txt  (+45 more)
(+5 files in other folders)
